--- a/exam/src/main/resources/application.properties
+++ b/exam/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/student_manager
 spring.datasource.username=root
 spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
