--- a/project2/src/main/resources/application.properties
+++ b/project2/src/main/resources/application.properties
@@ -1,9 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/coffee_manager_test
+spring.datasource.username= root
 spring.datasource.password=
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
 
 spring.jpa.hibernate.ddl-auto=update
-spring.application.name=project2
-server.port=8081
+
